--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,8 @@ github_username:  jekyll
 
 # Build settings
 theme: just-the-docs
-# plugins:
-#   - jekyll-feed
+plugins:
+  - jekyll-feed
 
 nav_sort: case_insensitive
 
