--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,8 @@ github_username:  jekyll
 
 
 # Build settings
-theme: just-the-docs
+#theme: just-the-docs
+remote_theme: pmarsceill/just-the-docs
 plugins:
   - jekyll-feed
 
