--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: community@mion.io
 description: >- # this means to ignore newlines until "baseurl:"
   Mion is an embedded operating system designed for network devices with
   security and supportability at it's core.
-baseurl: "/docs" # the subpath of your site, e.g. /blog
+baseurl: "/mion-docs" # the subpath of your site, e.g. /blog
 url: "https://docs.mion.io" # the base hostname & protocol for your site, e.g. http://example.com
 # baseurl: "/" # the subpath of your site, e.g. /blog
 # url: "http://127.0.0.1" # the base hostname & protocol for your site, e.g. http://example.com
