--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ plugins:
 
 nav_sort: case_insensitive
 # Dirty work-around until we can find the cause for logo not appearing
-logo: "https://github.com/APS-Networks/mion-docs/blob/dunfell/assets/images/mion-header-logo.png"
+logo: "assets/images/mion-header-logo.png"
 color_scheme: mion
 
 # Added extra in _includes/title.html
