--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Mion OS 
-email: your-email@example.com
+title: Mion - Mini Infrastucture Operating System for Networks
+email: community@mion.io
 description: >- # this means to ignore newlines until "baseurl:"
   Mion is an embedded operating system designed for network devices with
   security and supportability at it's core.
@@ -27,8 +27,8 @@ baseurl: "/mion-docs" # the subpath of your site, e.g. /blog
 url: "https://aps-networks.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # baseurl: "/" # the subpath of your site, e.g. /blog
 # url: "http://127.0.0.1" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: mion_os
+github_username:  APS-Networks
 
 
 # Build settings
