--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ email: community@mion.io
 description: >- # this means to ignore newlines until "baseurl:"
   Mion is an embedded operating system designed for network devices with
   security and supportability at it's core.
-baseurl: "/mion-docs" # the subpath of your site, e.g. /blog
-url: "https://aps-networks.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://doc.mion.io" # the base hostname & protocol for your site, e.g. http://example.com
 # baseurl: "/" # the subpath of your site, e.g. /blog
 # url: "http://127.0.0.1" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: mion_os
