Replace docs/quickstart.md with docs/getting-started
The quickstart, which was copied from mion/README.md, has been replaced
with the more detailed getting-started. Other minor changes to reflect
the moved repositories were made. There will likely be more changes made
in the near future as the getting started guide is revised and expanded.

Signed-off-by: Katrina Prosise <igorina@toganlabs.com>

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ url: "https://docs.mion.io" # the base hostname & protocol for your site, e.g. h
 # baseurl: "/" # the subpath of your site, e.g. /blog
 # url: "http://127.0.0.1" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: mion_os
-github_username:  APS-Networks
+github_username:  NetworkGradeLinux
 
 
 # Build settings
