Move Git Commandments and Style Guide Into NGL mion-docs
Files were placed for the time being into mion-docs/_meta, we may want
to consider moving them into mion-docs/docs in the future. For now they
are being excluded from docs.mion.io.

This commit closes mion-docs #96

Signed-off-by: Katrina Prosise <igorina@toganlabs.com>

--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,8 @@ aria_logo: mion
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
-
+exclude:
+  - _meta/
 
 aux_links:
   "Mion on GitHub":
