--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Mion - Mini Infrastucture Operating System for Networks
+title: mion - Mini Infrastucture Operating System for Networks
 email: community@mion.io
 description: >- # this means to ignore newlines until "baseurl:"
-  Mion is an embedded operating system designed for network devices with
+  mion is an embedded operating system designed for network devices with
   security and supportability at it's core.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://docs.mion.io" # the base hostname & protocol for your site, e.g. http://example.com
