Sync changes made in gh-pages
Changes were made on gh-pages without first committing and merging to
default (dunfell). This commit adds those changes, as well as other
minor changes made to the layout of mion-docs.

This commit checks a box for mion-docs#179

Signed-off-by: Katrina Prosise <igorina@toganlabs.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,12 +26,13 @@ nav:
 theme:
     name: material
     scheme: mion
-    custom_dir: overrides
+      #custom_dir: overrides
     logo: assets/images/mion-colour-small.png
 
+      #extra_css:
+      #  - stylesheets/color_schemes/mion.css
 extra_css:
-  - stylesheets/color_schemes/mion.css
-
+  - stylesheets/extra.css
 # add attribute list extension to allow for html/CSS  for markdown elements,
 # primarily to allow for image sizing and alignment
   - css/version-select.css
@@ -50,4 +51,3 @@ extra_javascript:
 extra:
     version:
         method: mike
-
