Add supported switch table
A table of switches that are supported for mion 2021.03 Blasket has been
added to the main documentation.

This will be deployed to the gh-pages branch after merge into dunfell.

This commit checks off an item on mion-docs #179

Signed-off-by: Katrina Prosise <igorina@toganlabs.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,7 @@ nav:
   - Home: index.md
   - Getting Started Guide: getting-started.md
   - Installing mion: installing_mion.md
+  - Supported switches: supported-switches.md
   - Resources: resources.md
   - Image Types: imagetypes.md
   - Trusted Platform Module: trusted-platform-module.md
