--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,13 +13,13 @@ nav:
   - Supported switches: supported-switches.md
   - Resources: resources.md
   - Image Types: imagetypes.md
-  - Trusted Platform Module: trusted-platform-module.md
   - Glossary: glossary.md
   - Accessibility: ACCESSIBILITY.md
   - Community:
       - About our Community: community/Community.md
       - Code of Conduct: community/code-of-conduct.md
       - CoC Interpretation: community/Coc-interpretation.md
+  - Adds and Ends: adds-and-ends.md
   - Acknowedgements: acknowledgements.md
 
 
@@ -27,6 +27,7 @@ nav:
 theme:
     name: material
     scheme: mion
+    features:
       #custom_dir: overrides
     logo: assets/images/mion-colour-small.png
 
@@ -41,11 +42,6 @@ markdown_extensions:
   - attr_list
 
 # Versioning done with https://github.comjimporter/mike
-#plugins:
-#  - mike:
-#      version_selector: true
-#      css_dir: css
-#      javascript_dir: js
 extra_javascript:
   - js/version-select.js
 
