Kprosise/release prep (#185)
* Run QA on documentation

All major issues have been checked and cleaned up. There are some style
and formatting changes that will be made, but most major changes have
been made.

This commit checks off some of mion-docs #179

Signed-off-by: Katrina Prosise <igorina@toganlabs.com>

* Prepare Doc for 2021.03 release

Minor Changes made before commit, only release notes missing.
This checks boxes for mion-docs #179
Signed-off-by: Katrina Prosise <igorina@toganlabs.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,8 @@
 site_name: mion docs
 repo_url: https://github.com/NetworkGradeLinux/mion/
 site_description: Documentation for Network Grade Linux mion
+edit_uri: ""
 
-# this may need changing...  
 remote_branch: gh-pages
 remote_name: dunfell
 
@@ -10,10 +10,13 @@ nav:
   - Home: index.md
   - Getting Started Guide: getting-started.md
   - Installing mion: installing_mion.md
-  - Supported switches: supported-switches.md
+  - Supported Switches: supported-switches.md
   - Resources: resources.md
   - Image Types: imagetypes.md
   - Glossary: glossary.md
+  - Adds and Ends: adds-and-ends.md
+  - Release Notes: 
+      - 2021.03: release_notes/2021-03.md
   - Accessibility: ACCESSIBILITY.md
   - Community:
       - About our Community: community/Community.md
@@ -21,7 +24,6 @@ nav:
       - CoC Interpretation: community/Coc-interpretation.md
   - Adds and Ends: adds-and-ends.md
   - Acknowedgements: acknowledgements.md
-
 
 # Theme settings
 theme:
