Clean-up changes to adds-and-ends.md
Information on meta-mion restructuring and container changes have been
added. Changes to mkdocs.yml made for navigation.

This commit will close #208

Signed-off-by: Katrina Prosise <igorina@toganlabs.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,7 +12,7 @@ nav:
   - Installing mion: installing_mion.md
   - Supported Switches: supported-switches.md
   - Resources: resources.md
-  - Image Types: imagetypes.md
+  - mion Container Support: mion-container-support.md
   - Glossary: glossary.md
   - Adds and Ends: adds-and-ends.md
   - Release Notes: 
