Document new features for 2021.06
Some, though not all, new features and supported solutions have been
documented. Absent is SDE upgrade info, TN48m and DENT, which will be
done in a separate commit after those items have been added to the wiki.

Page rendering and links were checked locally and no issues were found
that relate to changes made in this commit.

This commit applies to mion-docs#219

Signed-off-by: Katrina Prosise <igorina@toganlabs.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,7 @@ nav:
   - Supported Switches: supported-switches.md
   - Resources: resources.md
   - mion Container Support: mion-container-support.md
+  - Stratum: stratum.md
   - Glossary: glossary.md
   - Adds and Ends: adds-and-ends.md
   - Release Notes: 
