Check all links in mion-docs for correctness
Added new links, and checked that all links function. Links in
documentation outside of mion-docs still need to be validated.

Checked locally using `mkdocs serve`

This commit applies to mion-docs#219

Signed-off-by: Katrina Prosise <igorina@toganlabs.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,11 +9,10 @@ remote_name: dunfell
 nav:
   - Home: index.md
   - Getting Started Guide: getting-started.md
-  - Installing mion: installing_mion.md
+  - Installing mion: installing-mion.md
   - Supported Switches: supported-switches.md
   - Resources: resources.md
   - mion Container Support: mion-container-support.md
-  - Stratum: stratum.md
   - Glossary: glossary.md
   - Adds and Ends: adds-and-ends.md
   - Release Notes: 
