--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,7 @@ nav:
   - Adds and Ends: adds-and-ends.md
   - Release Notes: 
       - 2021.03: release_notes/2021-03.md
+      - 2021.06: release_notes/2021-06.md 
   - Accessibility: ACCESSIBILITY.md
   - Community:
       - About our Community: community/Community.md
